--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,11 +1,11 @@
 .main h1{
-    margin: 90px 0;
+    margin: 45px 0;
 }
 .menu a{
     min-width: 75px;
 }
 
-#user {
+#santa {
     max-width: 200px;
     margin: 0 auto;
 }
